--- a/EmailWebApi/appsettings.json
+++ b/EmailWebApi/appsettings.json
@@ -11,12 +11,13 @@
         "Host": "smtp.mail.ru",
         "Port": 25,
         "Username": "ilapmail@mail.ru",
-        "Password": "hjr23m40q",
+        "Password": "",
         "SenderEmail": "ilapmail@mail.ru",
         "ReplyEmail": "ilapmail@mail.ru"
     },
-    "Throttler": {
-        "GlobalRequestPerMinute":  5
+    "ThrottlingSettings": {
+        "Limit": 3,
+        "AddressLimit":  3
     },
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB; Database = testdb"
