Архитектурные прослойки и описания

--- a/EmailWebApi/appsettings.json
+++ b/EmailWebApi/appsettings.json
@@ -1,23 +1,26 @@
 {
     "Logging": {
         "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
+            "Default": "Error",
+            "Microsoft": "Error",
+            "Microsoft.Hosting.Lifetime": "Error"
         }
     },
     "AllowedHosts": "*",
     "SmtpSettings": {
-        "Host": "smtp.mail.ru",
-        "Port": 25,
-        "Username": "ilapmail@mail.ru",
+        "Host": "",
+        "Port": 0,
+        "Username": "",
         "Password": "",
-        "SenderEmail": "ilapmail@mail.ru",
-        "ReplyEmail": "ilapmail@mail.ru"
+        "SenderEmail": "",
+        "ReplyEmail": ""
     },
     "ThrottlingSettings": {
         "Limit": 3,
         "AddressLimit": 3
+    },
+    "QueryExecutorSettings": {
+        "Delay": "15000"
     },
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB; Database = testdb"
