Тесты, доработка архитектуры.
Чистка кода и несколько Todoшек.

--- a/EmailWebApi/appsettings.json
+++ b/EmailWebApi/appsettings.json
@@ -8,12 +8,12 @@
     },
     "AllowedHosts": "*",
     "SmtpSettings": {
-        "Host": "",
-        "Port": 0,
-        "Username": "",
+        "Host": "smtp.mail.ru",
+        "Port": 1,
+        "Username": "test@test.test",
         "Password": "",
-        "SenderEmail": "",
-        "ReplyEmail": ""
+        "SenderEmail": "test@test.test",
+        "ReplyEmail": "test@test.test"
     },
     "ThrottlingSettings": {
         "Limit": 3,
