--- a/EmailWebApi/appsettings.json
+++ b/EmailWebApi/appsettings.json
@@ -8,12 +8,14 @@
     },
     "AllowedHosts": "*",
     "SmtpSettings": {
-        "Host": "smtp.mail.ru",
+        "Host": "",
         "Port": 1,
-        "Username": "test@test.test",
+        "Username": "",
         "Password": "",
-        "SenderEmail": "test@test.test",
-        "ReplyEmail": "test@test.test"
+        "SenderEmail": "",
+        "SenderName": "",
+        "LogFileName": "smtp.log",
+        "TextType":  "plain" 
     },
     "ThrottlingSettings": {
         "Limit": 3,
